<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clGeral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <Button
            android:id="@+id/btSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="onClickSair"
            android:text="@string/sair"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.786"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llTiposSMSs" />

        <Button
            android:id="@+id/btAtivarDesativar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="onClickAtivarDesativar"
            android:tag="1"
            android:text="@string/ativar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llTiposSMSs" />

        <LinearLayout
            android:id="@+id/llTiposSMSs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTipo">

            <CheckBox
                android:id="@+id/cbConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:checked="true"
                android:text="@string/configuracoes" />

            <CheckBox
                android:id="@+id/cbReiniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:checked="true"
                android:text="@string/reiniciar_acordar" />

            <CheckBox
                android:id="@+id/cbUsuarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:checked="true"
                android:text="@string/usuarios" />

            <CheckBox
                android:id="@+id/cbAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:checked="true"
                android:text="@string/admin" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgCHIPs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/rbCHIP1"
            android:focusable="auto"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCHIPs">

            <RadioButton
                android:id="@+id/rbCHIP1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:text="@string/chip1" />

            <RadioButton
                android:id="@+id/rbCHIP2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:text="@string/chip2" />

            <RadioButton
                android:id="@+id/rbCHIP0"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:text="@string/chip0" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/marque_tipo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgCHIPs" />

        <TextView
            android:id="@+id/tvCHIPs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/descricao_opcoes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConfigBasico"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="108dp">

        <Button
            android:id="@+id/btSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="onClickSalvar"
            android:text="SALVAR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTempoAcesso" />

        <Button
            android:id="@+id/btVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="onClickVoltar"
            android:text="VOLTAR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.773"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTempoAcesso" />

        <EditText
            android:id="@+id/etSIM1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="SIM 1"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNumerosSIM" />

        <EditText
            android:id="@+id/etSIM2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="SIM 2"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSIM1" />

        <EditText
            android:id="@+id/etTempoAcesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="Formato H:m:s"
            android:inputType="time"
            android:text="00:01:00"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTempoAcesso" />

        <RadioGroup
            android:id="@+id/rgNumCHIPs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:checkedButton="@id/rbComZero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvZeroSMS">

            <RadioButton
                android:id="@+id/rbComZero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:text="COM zero na frente" />

            <RadioButton
                android:id="@+id/rbSemZero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#2196F3"
                android:text="SEM zero na frente" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvZeroSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Antes de enviar o SMS, o número deve ser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSIM2" />

        <TextView
            android:id="@+id/tvConfigBasico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtConfig"
            android:textAlignment="center"
            android:textColor="#0000FF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNumerosSIM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/txtNumCHIPs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfigBasico" />

        <TextView
            android:id="@+id/tvTempoAcesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Tempo do ciclo de acesso ao servidor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgNumCHIPs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConfigAvancado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/btVoltar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="onClickVoltar"
            android:text="VOLTAR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.773"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etValoresArgumento" />

        <Button
            android:id="@+id/btSalvar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:onClick="onClickSalvar"
            android:text="SALVAR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etValoresArgumento" />

        <EditText
            android:id="@+id/etURLWebService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:hint="https://www.teste.com/webservice.php?filtro="
            android:inputType="textPersonName"
            android:linksClickable="false"
            android:singleLine="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvURLWebService" />

        <EditText
            android:id="@+id/etValoresArgumento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="Exemplo: C, R, U, A"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValoresArgumento" />

        <TextView
            android:id="@+id/tvConfigAvancado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="CONFIGURAÇÔES\nAVANÇADO"
            android:textAlignment="center"
            android:textColor="#0000FF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvValoresArgumento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:text="Valores a serem enviados (4 valores separados por vírgula)"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etURLWebService" />

        <TextView
            android:id="@+id/tvURLWebService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:text="Endereço URL do WebService, com nome do argumento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfigAvancado" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>